[ticket/13667] Fix buttons alignment in Chrome for Windows
PHPBB3-13667

--- a/phpBB/styles/prosilver/theme/buttons.css
+++ b/phpBB/styles/prosilver/theme/buttons.css
@@ -8,6 +8,7 @@
 	cursor: pointer;
 	display: inline-block;
 	height: 18px;
+	line-height: 18px;
 	font-size: 13px;
 	white-space: nowrap;
 	border: 1px solid transparent;
